added background color change interactivity to number buttons

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
 <body class="tw-bg-ir-very-dark-blue">
-  <main class="tw-flex tw-justify-center tw-items-center tw-min-h-screen tw-text-white">
+  <main class="tw-flex tw-justify-center tw-items-center tw-min-h-screen tw-text-white tw-px-4">
     <div class="tw-rounded-3xl tw-flex tw-justify-center tw-h-[22rem] tw-w-[22rem] tw-bg-gradient-to-t tw-from-ir-dark-blue/40 tw-to-ir-dark-blue tw-p-7">
       <!--rating card-->
       <div class="tw-flex tw-flex-col tw-justify-between">
@@ -21,15 +21,15 @@
             to help us improve our offering!
           </p>
         </div>
-        <ul class="tw-flex tw-flex-row tw-justify-between">
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer">1</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer">2</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer">3</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer">4</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer">5</li>          
+        <ul class="tw-flex tw-flex-row tw-justify-between tw-select-none">
+          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300 active:tw-bg-ir-light-grey">1</li>
+          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">2</li>
+          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">3</li>
+          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">4</li>
+          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">5</li>          
         </ul>
         <div>
-          <button type="submit" class="tw-text-center tw-w-full tw-bg-ir-orange tw-py-3 tw-mt-4 tw-uppercase tw-rounded-full tw-tracking-wider tw-font-bold tw-text-sm">submit</button>
+          <button type="submit" class="tw-text-center tw-w-full tw-bg-ir-orange hover:tw-bg-white hover:tw-text-ir-orange tw-transition-colors tw-duration-200 tw-py-3 tw-mt-4 tw-uppercase tw-rounded-full tw-tracking-wider tw-font-bold tw-text-sm">submit</button>
         </div>
       </div>
   
