--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <main class="tw-flex tw-justify-center tw-items-center tw-min-h-screen tw-text-white tw-px-4">
     <div class="tw-rounded-3xl tw-flex tw-justify-center tw-h-[22rem] tw-w-[22rem] tw-bg-gradient-to-t tw-from-ir-dark-blue/40 tw-to-ir-dark-blue tw-p-7">
       <!--rating card-->
-      <div class="tw-flex tw-flex-col tw-justify-between tw-hidden">
+      <div class="tw-flex tw-flex-col tw-justify-between">
         <div class="tw-h-9 tw-w-9 tw-p-[0.65rem] tw-flex tw-items-center tw-justify-center tw-bg-ir-medium-grey/20 tw-rounded-full"><img src="assets/images/icon-star.svg" alt="star" class="tw-w-full"></div>
         <div>
           <h1 class="tw-text-2xl tw-font-bold tw-my-2">How did we do?</h1>
@@ -22,11 +22,11 @@
           </p>
         </div>
         <ul class="tw-flex tw-flex-row tw-justify-between tw-select-none">
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">1</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">2</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">3</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">4</li>
-          <li class="tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">5</li>          
+          <li class="rating tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">1</li>
+          <li class="rating tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">2</li>
+          <li class="rating tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">3</li>
+          <li class="rating tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">4</li>
+          <li class="rating tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">5</li>          
         </ul>
         <div>
           <button type="submit" class="tw-text-center tw-w-full tw-bg-ir-orange hover:tw-bg-white hover:tw-text-ir-orange tw-transition-colors tw-duration-200 tw-py-3 tw-mt-4 tw-uppercase tw-rounded-full tw-tracking-wider tw-font-bold tw-text-sm">submit</button>
@@ -34,12 +34,12 @@
       </div>
   
       <!--thank you card-->
-      <div class="tw-flex tw-flex-col tw-items-center tw-justify-between">
+      <div class="tw-flex tw-flex-col tw-items-center tw-justify-between tw-hidden">
         <div class="tw-flex tw-flex-row tw-justify-center tw-p-4">
           <img src="assets/images/illustration-thank-you.svg" alt="thank you" class="tw-w-36">
         </div>
         <div class="tw-flex tw-items-center tw-justify-center tw-bg-ir-medium-grey/10 tw-rounded-full tw-px-4 tw-h-8 tw-text-ir-orange/90 tw-text-sm">
-          You selected <span id="user_rating" class="tw-px-1">0</span>out of 5
+          You selected <span id="user_selected_rating" class="tw-px-1">0</span>out of 5
         </div>
         <div class="tw-text-center">
           <h1 class="tw-font-bold tw-text-2xl tw-my-3">Thank you!</h1>
