--- a/index.html
+++ b/index.html
@@ -4,15 +4,15 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  <link rel="stylesheet" href="assets/custom.css">
   <link rel="stylesheet" href="assets/output.css">
+  <link rel="stylesheet" href="assets/custom.css">
   <title>Frontend Mentor | Interactive rating component</title>
 </head>
 <body class="tw-bg-ir-very-dark-blue">
   <main class="tw-flex tw-justify-center tw-items-center tw-min-h-screen tw-text-white tw-px-4">
     <div class="tw-rounded-3xl tw-flex tw-justify-center tw-h-[22rem] tw-w-[22rem] tw-bg-gradient-to-t tw-from-ir-dark-blue/40 tw-to-ir-dark-blue tw-p-7">
       <!--rating card-->
-      <div class="tw-flex tw-flex-col tw-justify-between">
+      <div class="rating-card tw-flex tw-flex-col tw-justify-between">
         <div class="tw-h-9 tw-w-9 tw-p-[0.65rem] tw-flex tw-items-center tw-justify-center tw-bg-ir-medium-grey/20 tw-rounded-full"><img src="assets/images/icon-star.svg" alt="star" class="tw-w-full"></div>
         <div>
           <h1 class="tw-text-2xl tw-font-bold tw-my-2">How did we do?</h1>
@@ -29,12 +29,12 @@
           <li class="rating tw-flex tw-items-center tw-justify-center tw-h-10 tw-w-10 tw-bg-ir-light-grey/20 tw-text-ir-light-grey tw-rounded-full tw-text-sm tw-cursor-pointer hover:tw-bg-ir-orange hover:tw-text-white tw-transition-colors tw-duration-300">5</li>          
         </ul>
         <div>
-          <button type="submit" class="tw-text-center tw-w-full tw-bg-ir-orange hover:tw-bg-white hover:tw-text-ir-orange tw-transition-colors tw-duration-200 tw-py-3 tw-mt-4 tw-uppercase tw-rounded-full tw-tracking-wider tw-font-bold tw-text-sm">submit</button>
+          <button type="submit" class="submit tw-text-center tw-w-full tw-bg-ir-orange hover:tw-bg-white hover:tw-text-ir-orange tw-transition-colors tw-duration-200 tw-py-3 tw-mt-4 tw-uppercase tw-rounded-full tw-tracking-wider tw-font-bold tw-text-sm">submit</button>
         </div>
       </div>
   
       <!--thank you card-->
-      <div class="tw-flex tw-flex-col tw-items-center tw-justify-between tw-hidden">
+      <div class="thank-you-card tw-flex tw-flex-col tw-items-center tw-justify-between tw-hidden">
         <div class="tw-flex tw-flex-row tw-justify-center tw-p-4">
           <img src="assets/images/illustration-thank-you.svg" alt="thank you" class="tw-w-36">
         </div>
