--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="./src/assets/images/favicon-32x32.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Frontend Mentor | Interactive rating component</title>
+    <!-- <link rel="stylesheet" href="./src/App.css" type="text/css" /> -->
   </head>
   <body>
     <div id="root"></div>
