all files ready for production

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <!-- <link rel="stylesheet" href="./src/App.css" type="text/css" /> -->
   </head>
   <body>
-    <div id="root"></div>
+    <div id="root" class="tw-min-h-screen tw-flex tw-flex-col tw-justify-center tw-items-center tw-text-[15px] tw-text-white tw-bg-ir-very-dark-blue tw-p-7 md:tw-p-0"></div>
     <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
